Fix ImGui SDL2 frame call

--- a/modern/CMakeLists.txt
+++ b/modern/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(SDL2 REQUIRED)
 FetchContent_Declare(
   imgui
   URL https://github.com/ocornut/imgui/archive/refs/tags/v1.90.9.tar.gz
+  DOWNLOAD_EXTRACT_TIMESTAMP TRUE
 )
 FetchContent_MakeAvailable(imgui)
 
