--- a/modern/CMakeLists.txt
+++ b/modern/CMakeLists.txt
@@ -8,8 +8,11 @@ add_library(ps_modern_core
   src/image_document.cpp
   src/command.cpp
   src/undo_stack.cpp
+  src/selection_mask.cpp
+  src/selection_command.cpp
   src/tools/tool.cpp
   src/tools/brush_tool.cpp
+  src/tools/selection_tools.cpp
   src/tools/tool_manager.cpp
   src/rendering/viewport.cpp
   src/rendering/canvas.cpp
